# kenjutsu

./: .coderabbit.yaml  .gitignore  AGENTS.md  Dockerfile  alembic.ini  fly.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy-staging.yml  smoke-test-staging.yml
docs/: INDEX.md
docs/staging/: github-app-setup.md
evaluation/corpus/: index.yaml
evaluation/corpus/prs/: express-6088.yaml  express-6525.yaml  express-6903.yaml  express-6991.yaml  express-6992.yaml  fastapi-11191.yaml  fastapi-13786.yaml  fastapi-14372.yaml  fastapi-14459.yaml  fastapi-14862.yaml  fastapi-14986.yaml  flask-5620.yaml  flask-5736.yaml  flask-5799.yaml  flask-5812.yaml  flask-5818.yaml  flask-5917.yaml  httpx-2252.yaml  httpx-2911.yaml  httpx-3022.yaml  httpx-3050.yaml  httpx-3116.yaml  httpx-3187.yaml  httpx-3382.yaml  nextjs-91832.yaml  nextjs-91835.yaml  (+34 more)
kenjutsu/: __init__.py  app.py  database.py  models.py
kenjutsu/config/: __init__.py  loader.py  models.py
kenjutsu/db/: __init__.py  models.py
kenjutsu/diff/: __init__.py  ast_context.py  budget.py  models.py  parser.py
kenjutsu/evaluation/: __init__.py  runner.py
kenjutsu/github/: __init__.py  auth.py
kenjutsu/migrations/: env.py
kenjutsu/mirror/: __init__.py  api.py  lifecycle.py
kenjutsu/models/: __init__.py  findings.py  reviews.py
kenjutsu/pipeline/: __init__.py  logic.py  publisher.py  queue.py  sha_guard.py  steps.py  supersession.py  types.py
kenjutsu/publisher/: __init__.py  audit.py  check_run.py  pending_review.py
kenjutsu/server/: __init__.py  commands.py  debounce.py  webhook.py
research/: INDEX.md  architecture-balanced.md  architecture-innovative.md  architecture-pragmatic.md  differentiation.md  kenjutsu-architecture-v3.md  kenjutsu-implementation-plan.md  lightrag-retrieval-systems.md
research/dem-104/: competitive-analysis.md  context-rag-strategies.md  github-integration.md  pr-agent-deep-dive.md  synthesis.md  technical-feasibility.md
research/dem-114/: retrieval-framework-evaluation.md
research/dem-121/: EVALUATION-FRAMEWORK.md  embedding-reranking-assessment.md
research/dem-139/: appendix-config-surface.md  appendix-timeline.md  prompt-evolution-catalog.md
scripts/: provision-staging-postgres.sh
tests/: conftest.py
tests/integration/: conftest.py  test_audit_integration.py  test_check_run_publisher_integration.py  test_evaluation_runner_integration.py  test_migrations.py  test_mirror_api.py  test_mirror_lifecycle.py  test_pending_review_publisher.py  test_pipeline_full.py  test_pipeline_steps.py  test_placeholder.py  test_webhook_endpoint.py
tests/unit/: test_audit.py  test_check_run_publisher.py  test_check_run_publisher_orchestration.py  test_commands.py  test_comparison_report.py  test_config.py  test_debounce.py  test_diff_ast_context.py  test_diff_parser.py  test_diff_parser_real_world.py  test_evaluation_runner.py  test_github_auth.py  test_mirror_api.py  test_mirror_lifecycle.py  test_models.py  test_pipeline_logic.py  test_pipeline_workflow.py  test_publisher.py  test_queue.py  test_sha_guard.py  test_supersession.py  test_token_budget.py  test_webhook_hmac.py
(+50 files in other folders)
